# agent-with-memory

./: .gitignore  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: run_uvicorn.sh  server-start.sh  test_chat.py  test_ddg.py  test_raw_chat.py  test_tool.py  test_tool_parse.py
src/agent_host/app/: config.py  main.py  models.py
src/agent_host/app/agents/: profiles.py
src/agent_host/app/clients/: duckduckgo.py  llamacpp.py
src/agent_host/app/memory/: chroma_store.py
src/agent_host/app/orchestrator/: history.py  session.py  tools.py
src/agent_host/data/agents/default/: profile.json
tests/: conftest.py  test_agents_api.py  test_chroma_store.py  test_history.py  test_main_profiles.py  test_session_run_turn.py  test_tools_memory_agent.py
